hw1-healthcheck-service/target/kubernetes/healthcheck/hw1-halthcheck-deployment/templates/healthcheck_svc.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations: {}
  labels:
    app: "healthcheck"
  name: "hw1-halthcheck-service"
spec:
  ports:
  - name: "http-hw1-halthcheck-service"
    port: 8000
    protocol: "TCP"
    targetPort: 8000
  selector:
    app: "healthcheck"
  type: "ClusterIP"
