hw1-healthcheck-service/target/kubernetes/healthcheck/hw1-halthcheck-deployment/templates/healthcheck_ingress.yaml
---
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/health"
  labels:
    app: "healthcheck"
  name: "hw1-halthcheck-ingress"
spec:
  rules:
  - host: "arch.homework"
    http:
      paths:
      - backend:
          serviceName: "hw1-halthcheck-service"
          servicePort: 8000
        path: "/otusapp/(.*)/health"
